--- a/about.html
+++ b/about.html
@@ -352,5 +352,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/custom.js"></script>
+		<script src="js/main.js"></script>
   </body>
   </html>
