--- a/signin.html
+++ b/signin.html
@@ -59,16 +59,16 @@
         </div>
         <div class="form-group">
           <label for="contrasena">Contraseña</label>
-          <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+          <input type="password" id="password" name="contrasena" placeholder="Contraseña" required>
         </div>
         <div class="botones d-flex justify-content-center">
           <button class="login-button" type="submit">Registrarse</button>
-          <button class="login-button" type="submit">Ingresar</button>
         </div>
         <a class="return-link" href="index.html">Volver a la página principal</a>
       </form>
     </div>
     <script src="./js/main.js" type="module"></script>
+    <script src="./js/signin.js"></script>
 </body>
 
 </html>
