Verificar inicio de sesión

--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
         <p></p>
         <button class="login-button" type="submit">Registrarse</button>
       </form>
+      <div id="error-message" style="color: red; display: none; margin-top: 8px;">Usuario o contraseña incorrectos</div>
       <a class="return-link" href="index.html">Volver a la página principal</a>
     </div>
     <script src="./js/main.js" type="module"></script>
