Cambios en el front de la pestaña Educación Financiera e Inicio

--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
             </div>
             <div class="col-8 text-center ">
               <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Inicio</a></li>
                 <li>
-                  <a href="financing.html">Cursos</a>
+                  <a href="financing.html">Educación financiera</a>
                 </li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="services.html">Aplicacion </a></li>
-                <li><a href="about.html">Sobre nosotros</a></li>
-                <li><a href="contact.html">Contactanos</a></li>
+                <li> <a href="blog.html">Membresia</a></li>
+                <li><a></a></li>
                 <li>
                   <a href="login.html" id="login-button">Iniciar Sesión</a>
                 </li>
@@ -76,7 +74,6 @@
                 class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light">
                 <span></span>
               </a>
-
             </div>
           </div>
         </div>
@@ -89,9 +86,8 @@
     <div class="container">
       <div class="row align-items-center justify-content-between pt-5">
         <div class="col-lg-6 text-center text-lg-start pe-lg-5">
-          <h1 class="heading text-white mb-3" data-aos="fade-up">Bienvenido
-          </h1>
-          <p class="text-white mb-5" data-aos="fade-up" data-aos-delay="100">Gestiona tu dinero, alcanza tus metas con WhatMoney</p>
+          <h1 class="heading text-white mb-3" data-aos="fade-up">Bienvenido</h1>
+          <p class="text-white mb-5" data-aos="fade-up" data-aos-delay="100">"Gestiona tu dinero, alcanza tus metas con WhatMoney"</p>
           <div class="align-items-center mb-5 mm" data-aos="fade-up" data-aos-delay="200">
             <a href="contact.html" class="btn btn-outline-white-reverse me-4">Descubre WhatMoney</a>
             <a href="https://www.youtube.com/watch?v=Mb1zrW_zra4" class="text-white glightbox">Cursos</a>
@@ -107,7 +103,7 @@
   </div>
 
 
-  <div class="section">
+  <!--<div class="section">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-7 mb-4 mb-lg-0">
@@ -141,12 +137,10 @@
                 blind texts.</p>
             </div>
           </div>
-
         </div>
-
       </div>
     </div>
-  </div>
+  </div>-->
 
   <div class="section sec-features">
     <div class="container">
@@ -554,8 +548,7 @@
         <div class="col-lg-4">
           <div class="widget">
             <h3>About</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-              blind texts.</p>
+            <p>Eje</p>
           </div> <!-- /.widget -->
           <div class="widget">
             <address>43 Raymouth Rd. Baltemoer, <br> London 3910</address>
