--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
             </div>
             <div class="col-8 text-center ">
               <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li class="has-children">
                   <a href="financing.html">Pages</a>
                   <ul class="dropdown">
