--- a/case-study.html
+++ b/case-study.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/What-removebg-preview.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap5" />
