--- a/Reporte.html
+++ b/Reporte.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatMoney - Balance</title>
+    <title>WhatMoney - Reporte</title>
     <link rel="shortcut icon" href="images/What-removebg-preview.png">
-    <link rel="stylesheet" href="css/RegistroGastos.css">
+    <link rel="stylesheet" href="css/hhmr.css">
     <meta name="keywords" content="bootstrap, bootstrap5" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,25 +73,20 @@
         </div>
     </nav>
 
-    <div class="hero overlay">
-        <h1 class="heading text-white mb-3" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Bienvenido</h1>
-        <div class="info">
-            <div class="ingresos">
-                <h2 class="heading text-white">+ Ingresos +</h2>
-                <input class="cantidad" type="number" placeholder="Cantidad">
-                <input class="categoria" type="text" placeholder="Categoría">
-                <div class="detalle text-white">Detalle</div>
-            </div>
-            <div class="monto text-white" id="user-monto">
-                $2000
-            </div>
-            <div class="egresos">
-                <h2 class="heading text-white">- Egresos -</h2>
-                <input class="cantidad" type="number" placeholder="Cantidad">
-                <input class="categoria" type="text" placeholder="Categoría">
-                <div class="detalle text-white">Detalle</div>
-            </div>
-        </div>
+    <div class="hero overlay text-white">
+        <h1 class="heading text-white mb-3" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Accede a los reportes:</h1>
+        
+        <table class="data-table text-black">
+            <thead>
+                <tr>
+                    <th>Reportes</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+            </tbody>
+        </table>
+
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
