--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h1 class="heading text-white mb-3" data-aos="fade-up">Bienvenido</h1>
           <p class="text-white mb-5" data-aos="fade-up" data-aos-delay="100">"Gestiona tu dinero, alcanza tus metas con WhatMoney"</p>
           <div class="align-items-center mb-5 mm" data-aos="fade-up" data-aos-delay="200">
-            <a href="contact.html" class="btn btn-outline-white-reverse me-4">Descubre WhatMoney</a>
+            <a href="blog.html" class="btn btn-outline-white-reverse me-4">Descubre WhatMoney</a>
             <a href="https://www.youtube.com/watch?v=Mb1zrW_zra4" class="text-white glightbox">Cursos</a>
           </div>
         </div>
@@ -147,6 +147,7 @@
   </div>
   </div>
 
+  <div id="seccionDestino">
   <div class="section sec-services">
     <div class="container">
       <div class="row mb-5">
@@ -219,6 +220,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <div class="section sec-news">
     <div class="container">
@@ -310,88 +312,15 @@
 
   <div class="site-footer">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="widget">
-            <h3>About</h3>
-            <p>Eje</p>
-          </div> <!-- /.widget -->
-          <div class="widget">
-            <address>43 Raymouth Rd. Baltemoer, <br> London 3910</address>
-            <ul class="list-unstyled links">
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-              <li><a href="mailto:info@mydomain.com">info@mydomain.com</a></li>
-            </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <div class="widget">
-            <h3>Company</h3>
-            <ul class="list-unstyled float-start links">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Vision</a></li>
-              <li><a href="#">Mission</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Privacy</a></li>
-            </ul>
-            <ul class="list-unstyled float-start links">
-              <li><a href="#">Partners</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Creative</a></li>
-            </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <div class="widget">
-            <h3>Navigation</h3>
-            <ul class="list-unstyled links mb-4">
-              <li><a href="#">Our Vision</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Contact us</a></li>
-            </ul>
-
-            <h3>Social</h3>
-            <ul class="list-unstyled social">
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
-              <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-pinterest"></span></a></li>
-              <li><a href="#"><span class="icon-dribbble"></span></a></li>
-            </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-4 -->
-      </div> <!-- /.row -->
-
-      <div class="row mt-5">
-        <div class="col-12 text-center">
-          <!-- 
-              **==========
-              NOTE: 
-              Please don't remove this copyright link unless you buy the license here https://untree.co/license/  
-              **==========
-            -->
-
-          <p>Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love
-            by <a href="https://untree.co">Untree.co</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a>
-            <!-- License information: https://untree.co/license/ -->
-          </p>
-        </div>
-      </div>
-    </div> <!-- /.container -->
-  </div> <!-- /.site-footer -->
+      <p class="col-12 text-center">© 2023 WhatMoney - Todos los derechos reservados. Desarrollado por Slice.dev.</p>
+    </div> 
+  </div> 
 
   <!-- Preloader -->
   <div id="overlayer"></div>
   <div class="loader">
     <div class="spinner-border text-primary" role="status">
-      <span class="visually-hidden">Loading...</span>
+      <span class="visually-hidden">Cargando...</span>
     </div>
   </div>
 
@@ -399,7 +328,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/tiny-slider.js"></script>
   <script src="js/flatpickr.min.js"></script>
-
   <script src="js/aos.js"></script>
   <script src="js/glightbox.min.js"></script>
   <script src="js/navbar.js"></script>
