Correciones de tipos de campos

--- a/RegistroGastos.html
+++ b/RegistroGastos.html
@@ -79,8 +79,14 @@
             <div class="ingresos">
                 <h2 class="heading text-white">+ Ingresos +</h2>
                 <input class="cantidad" type="number" placeholder="Cantidad">
-                <input class="categoria" type="text" placeholder="Categoría">
-                <div class="detalle text-white">Detalle</div>
+                <select name="categoria" id="categoria" class="categoria">
+                    <option value="salario">Categoría</option>
+                    <option value="sueldo">Sueldo</option>
+                    <option value="prestamo">Préstamo</option>
+                    <option value="regalo">Regalo</option>
+                    <option value="otro">Otro</option>
+                </select>
+                <textarea class="detalle" placeholder="Detalle" rows="3"></textarea>
             </div>
             <div class="monto text-white" id="user-monto">
                 $2000
@@ -88,8 +94,14 @@
             <div class="egresos">
                 <h2 class="heading text-white">- Egresos -</h2>
                 <input class="cantidad" type="number" placeholder="Cantidad">
-                <input class="categoria" type="text" placeholder="Categoría">
-                <div class="detalle text-white">Detalle</div>
+                <select name="categoria" id="categoria" class="categoria">
+                    <option value="salario">Categoría</option>
+                    <option value="sueldo">Sueldo</option>
+                    <option value="prestamo">Préstamo</option>
+                    <option value="regalo">Regalo</option>
+                    <option value="otro">Otro</option>
+                </select>
+                <textarea class="detalle" placeholder="Detalle" rows="3"></textarea>
             </div>
         </div>
     </div>
