--- a/HistorialBalance.html
+++ b/HistorialBalance.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/glightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flatpickr.min.css">
+    <link rel="stylesheet" href="css/movimientos.css">
 </head>
 
 <body>
@@ -81,7 +82,7 @@
             <div class="superior">
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="camposSelect">
                     <div class="form-group">
                         <label class="text-white" for="fechaNac">Fecha:</label>
                         <input type="date" id="fechaNac" name="fechaNac" placeholder="Fecha de nacimiento" class="date-input">
