--- a/Metas.html
+++ b/Metas.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/glightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flatpickr.min.css">
+    <link rel="stylesheet" href="css/metas.css">
 </head>
 
 <body>
@@ -104,7 +105,7 @@
                     <option value="opcion3">Opción 3</option>
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-group descripcion">
                 <label for="descripcion">Descripción:</label>
                 <textarea id="descripcion" name="descripcion" rows="4"></textarea>
             </div>
