Se agregó mensaje de bienvenida para el usuario

--- a/RegistroGastos.html
+++ b/RegistroGastos.html
@@ -74,7 +74,7 @@
     </nav>
 
     <div class="hero overlay">
-        <h1 class="heading text-white mb-3" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Bienvenido</h1>
+        <h1 class="heading text-white mb-3" id="welcome-message" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;"></h1>
         <div class="info">
             <div class="ingresos">
                 <h2 class="heading text-white">+ Ingresos +</h2>
