--- a/HistorialMovimientos.html
+++ b/HistorialMovimientos.html
@@ -77,7 +77,7 @@
     <div class="hero overlay text-white">
         <h1 class="heading text-white mb-2" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Accede al historial de movimientos:</h1>
         <hr>
-        <form class="signin-form" enctype="multipart/form-data">
+        <!-- <form class="signin-form" enctype="multipart/form-data">
             <div class="superior">
             </div>
             <div class="row">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-        </form>
+        </form> -->
         
         <table class="data-table text-black">
             <thead>
@@ -118,11 +118,10 @@
                     <th>Hora</th>
                     <th>Categoría</th>
                     <th>Tipo</th>
-                    <th>Balance</th>
                     <th>Cantidad</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="transaction-table">
                 
             </tbody>
         </table>
@@ -138,7 +137,7 @@
     <script src="js/counter.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="js/movements.js"></script>
 </body>
 
 </html>
