--- a/RegistroGastos.html
+++ b/RegistroGastos.html
@@ -78,9 +78,9 @@
         <div class="info">
             <div class="ingresos">
                 <h2 class="heading text-white">+ Ingresos +</h2>
-                <input id="Ingreso_Cantidad" type="number" placeholder="Cantidad">
+                <input id="Ingreso_Cantidad" type="number" class="cantidad" placeholder="Cantidad">
                 <select id="Ingreso_Categoria" name="categoria" id="categoria" class="categoria">
-                    <option value="salario">Categoría</option>
+                    <option value="">Categoría</option>
                     <option value="sueldo">Sueldo</option>
                     <option value="prestamo">Préstamo</option>
                     <option value="regalo">Regalo</option>
@@ -88,7 +88,7 @@
                 </select>
                 <textarea id="Ingreso_Detalle" class="detalle" placeholder="Detalle" rows="3"></textarea>
                 <div class="button-container">
-                    <button id="btn-ingreso">Agregar ingreso</button>
+                    <button id="btn-ingreso" class="btn btn-success mt-3">Agregar ingreso</button>
                 </div>
             </div>
             <div class="monto text-white" id="user-monto">
@@ -106,7 +106,7 @@
                 </select>
                 <textarea id="Egreso_Detalle" class="detalle" placeholder="Detalle" rows="3"></textarea>
                 <div class="button-container">
-                    <button id="btn-egreso">Agregar egreso</button>
+                    <button id="btn-egreso" class="btn btn-success mt-3">Agregar egreso</button>
                 </div>
             </div>
         </div>
