Cambios en historial de balance

--- a/HistorialBalance.html
+++ b/HistorialBalance.html
@@ -99,7 +99,7 @@
                     <th>Balance</th>
                 </tr>
             </thead>
-            <tbody >
+            <tbody id="transaction-tableTwo" >
                 
             </tbody>
         </table>
@@ -114,6 +114,7 @@
     <script src="js/counter.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/balance.js"></script>
 
 </body>
 
