--- a/Metas.html
+++ b/Metas.html
@@ -80,7 +80,7 @@
     
         <div class="button-container">
             <a href="Metas.html" class="action-button">Nueva meta</a>
-            <!-- <a href="MetasModif.html"  class="action-button">Modificar</a> -->     
+            <a href="MetasModif.html"  class="action-button">Modificar</a>     
             <a href="MetasMostrar.html"  class="action-button">Mostrar</a>
         </div>
     
