Cambios de alertas y del monto  max y min

--- a/RegistroGastos.html
+++ b/RegistroGastos.html
@@ -88,7 +88,7 @@
                 </select>
                 <textarea id="Ingreso_Detalle" class="detalle" placeholder="Detalle" rows="3"></textarea>
                 <div class="button-container">
-                    <button id="btn-ingreso" class="btn btn-success mt-3">Agregar ingreso</button>
+                    <button id="btn-ingreso" class="btn btn-primary mt-3">Agregar ingreso</button>
                 </div>
             </div>
             <div class="monto text-white" id="user-monto">
@@ -106,8 +106,8 @@
                 </select>
                 <textarea id="Egreso_Detalle" class="detalle" placeholder="Detalle" rows="3"></textarea>
                 <div class="button-container">
-                    <button id="btn-egreso" class="btn btn-success mt-3">Agregar egreso</button>
-                </div>
+                    <button id="btn-egreso" class="btn btn-primary mt-3">Agregar egreso</button>
+                </div>                                                         
             </div>
         </div>
     </div>
