--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
   <link rel="stylesheet" href="css/flatpickr.min.css">
 
+  <!-- Usa el CDN de jQuery en tu HTML -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
   <title>WhatMoney</title>
 </head>
