--- a/HistorialMovimientos.html
+++ b/HistorialMovimientos.html
@@ -77,55 +77,23 @@
     <div class="hero overlay text-white">
         <h1 class="heading text-white mb-2" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Accede al historial de movimientos:</h1>
         <hr>
-        <!-- <form class="signin-form" enctype="multipart/form-data">
-            <div class="superior">
-            </div>
-            <div class="row">
-                <div class="camposSelect ">
-                    <div class="form-group">
-                        <label class="text-white" for="fechaNac">Fecha:</label>
-                        <input type="date" id="fechaNac" name="fechaNac" placeholder="Fecha de nacimiento" class="date-input">
-                    </div>
-                    <div class="form-group">
-                        <label class="text-white" for="fechaNac">Categoría:</label>
-                        <select name="categoria" id="categoria">
-                            <option value="0">Seleccione una categoría</option>
-                            <option value="1">Alimentación</option>
-                            <option value="2">Transporte</option>
-                            <option value="3">Salud</option>
-                            <option value="4">Educación</option>
-                            <option value="5">Servicios</option>
-                            <option value="6">Entretenimiento</option>
-                            <option value="7">Otros</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="text-white" for="fechaNac">Tipo:</label>
-                        <select name="tipoingre" id="tipoingre">
-                            <option value="0">Seleccione un tipo</option>
-                            <option value="1">Ingreso</option>
-                            <option value="2">Egreso</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </form> -->
-        
-        <table class="data-table text-black">
-            <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>Hora</th>
-                    <th>Categoría</th>
-                    <th>Tipo</th>
-                    <th>Cantidad</th>
-                </tr>
-            </thead>
-            <tbody id="transaction-table">
-                
-            </tbody>
-        </table>
-
+        <!-- Agrega un contenedor con scroll -->
+        <div class="scroll-container">
+            <table class="data-table text-black">
+                <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Hora</th>
+                        <th>Categoría</th>
+                        <th>Tipo</th>
+                        <th>Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody id="transaction-table">
+                    <!-- Aquí irán tus filas de datos -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
