--- a/login.html
+++ b/login.html
@@ -20,23 +20,25 @@
   <div class="hero overlay">
     <img src="images/blob.svg" alt="" class="img-fluid blob">
     <div class="container">
-      <form class="login-form">
-        <h2 class="title">Iniciar Sesión</h2>
-        <div class="form-group">
-          <label for="correo">Correo Electrónico</label>
-          <input type="email" id="correo" name="correo" placeholder="Correo Electrónico" required>
-        </div>
-        <div class="form-group">
-          <label for="contrasena">Contraseña</label>
-          <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
-        </div>
-        <button class="login-button" type="submit">Ingresar</button>
-        <p></p>
-        <button class="login-button" type="submit">Registrarse</button>
-      </form>
-      <div id="error-message" style="color: red; display: none; margin-top: 8px;">Usuario o contraseña incorrectos</div>
-      <a class="return-link" href="index.html">Volver a la página principal</a>
+        <form class="login-form">
+            <h2 class="title">Iniciar Sesión</h2>
+            <div class="form-group">
+                <label for="correo">Correo Electrónico</label>
+                <input type="email" id="correo" name="correo" placeholder="Correo Electrónico" required>
+            </div>
+            <div class="form-group">
+                <label for="contrasena">Contraseña</label>
+                <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+            </div>
+            <button class="login-button" type="submit">Ingresar</button>
+            <p></p>
+            <!-- Cambios en el botón de "Registrarse" -->
+            <button id="register-button" type="button">Registrarse</button>
+        </form>
+        <div id="error-message" style="color: red; display: none; margin-top: 8px;">Usuario o contraseña incorrectos</div>
+        <a class="return-link" href="index.html">Volver a la página principal</a>
     </div>
+</div>
     <script src="./js/main.js" type="module"></script>
 </body>
 
